nazvanie sohranennih izmeneniy

--- a/index.html
+++ b/index.html
@@ -5,8 +5,81 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="css/style.css">
+        <script type="text/javascript" src="js/jquery/jquery-1.11.3.min.js"></script>
+        <script type="text/javascript" src="js/jquery-ui/jquery-ui.min.js"></script>
+        <script type="text/javascript" src="js/carusel/jCarouselCore.js"></script>
     </head>
     <body>
+        <div class="topSlider">
+                <div class="slider">
+                    <div class="stageSlider">
+                        <div class="carousel carousel-stageSlider" data-jcarousel="true">
+                            <ul>
+                                <li>
+                                    <div class="sliderContent">
+                                        <div class="sliderContentIn">
+                                            <h1>JP FUNRIDE<br> 2014</h1>
+                                            <p>
+                                                The only online store you will ever need for all you windsurfing
+                                                and kitesurfing and SUP needs
+                                                The only online store you will ever need for all you windsurfing
+                                                and kitesurfing and SUP needs
+                                            </p>
+                                            <button>BUY NOW</button>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="sliderContent">
+                                        <div class="sliderContentIn">
+                                            <h1>JP FUNRIDE<br> 2014</h1>
+                                            <p>
+                                                The only online store you will ever need for all you windsurfing
+                                                and kitesurfing and SUP needs
+                                                The only online store you will ever need for all you windsurfing
+                                                and kitesurfing and SUP needs
+                                            </p>
+                                            <button>BUY NOW2</button>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="sliderContent">
+                                        <div class="sliderContentIn">
+                                            <h1>JP FUNRIDE<br> 2014</h1>
+                                            <p>
+                                                The only online store you will ever need for all you windsurfing
+                                                and kitesurfing and SUP needs
+                                                The only online store you will ever need for all you windsurfing
+                                                and kitesurfing and SUP needs
+                                            </p>
+                                            <button>BUY NOW3</button>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="slider-control-container">
+                            <a href="" class="prev prev-stageSlider" data-jcarouselcontrol="true">
+                                <img src="img/slideButton1.png" alt="">
+                            </a>
+                            <a href="" class="next next-stageSlider" data-jcarouselcontrol="true">
+                                <img src="img/slideButton2.png" alt="">
+                            </a>
+                            <div class="clear"></div>
+                        </div>
+                    </div>
+                    <div class="navigationSlider">
+                        <div class="carousel carousel-navigationSlider" data-jcarousel="true">
+                            <ul>
+                                <li data-jcarouselcontrol="true" class=""></li>
+                                <li data-jcarouselcontrol="true" class=""></li>
+                                <li data-jcarouselcontrol="true" class="active"></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         <header>
             <div class="headerTop">
                 <div class="headerTopLeft">
