nazvanie sohranennih izmeneniy

--- a/index.html
+++ b/index.html
@@ -10,76 +10,6 @@
         <script type="text/javascript" src="js/carusel/jCarouselCore.js"></script>
     </head>
     <body>
-        <div class="topSlider">
-                <div class="slider">
-                    <div class="stageSlider">
-                        <div class="carousel carousel-stageSlider" data-jcarousel="true">
-                            <ul>
-                                <li>
-                                    <div class="sliderContent">
-                                        <div class="sliderContentIn">
-                                            <h1>JP FUNRIDE<br> 2014</h1>
-                                            <p>
-                                                The only online store you will ever need for all you windsurfing
-                                                and kitesurfing and SUP needs
-                                                The only online store you will ever need for all you windsurfing
-                                                and kitesurfing and SUP needs
-                                            </p>
-                                            <button>BUY NOW</button>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="sliderContent">
-                                        <div class="sliderContentIn">
-                                            <h1>JP FUNRIDE<br> 2014</h1>
-                                            <p>
-                                                The only online store you will ever need for all you windsurfing
-                                                and kitesurfing and SUP needs
-                                                The only online store you will ever need for all you windsurfing
-                                                and kitesurfing and SUP needs
-                                            </p>
-                                            <button>BUY NOW2</button>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="sliderContent">
-                                        <div class="sliderContentIn">
-                                            <h1>JP FUNRIDE<br> 2014</h1>
-                                            <p>
-                                                The only online store you will ever need for all you windsurfing
-                                                and kitesurfing and SUP needs
-                                                The only online store you will ever need for all you windsurfing
-                                                and kitesurfing and SUP needs
-                                            </p>
-                                            <button>BUY NOW3</button>
-                                        </div>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="slider-control-container">
-                            <a href="" class="prev prev-stageSlider" data-jcarouselcontrol="true">
-                                <img src="img/slideButton1.png" alt="">
-                            </a>
-                            <a href="" class="next next-stageSlider" data-jcarouselcontrol="true">
-                                <img src="img/slideButton2.png" alt="">
-                            </a>
-                            <div class="clear"></div>
-                        </div>
-                    </div>
-                    <div class="navigationSlider">
-                        <div class="carousel carousel-navigationSlider" data-jcarousel="true">
-                            <ul>
-                                <li data-jcarouselcontrol="true" class=""></li>
-                                <li data-jcarouselcontrol="true" class=""></li>
-                                <li data-jcarouselcontrol="true" class="active"></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
         <header>
             <div class="headerTop">
                 <div class="headerTopLeft">
@@ -89,7 +19,7 @@
                     <p>Клиника эстетической стоматологии</p>
                 </div>
                 <div class="headerTopCenter">
-                    <img src="img/tre2.png" id="tre2" alt="">
+                    <img src="img/tre2.1.png" id="tre2" alt="">
                     <div class="firstDiv">
                         <img src="img/1.png" alt="">
                         <p>Топ 10 клиник по имплантации</p>
@@ -102,7 +32,7 @@
                         <img src="img/3.png" alt="">
                         <p>Компьютерная томография зубов и пазух носа</p>
                     </div>
-                    <img src="img/tre1.png" id="tre1" alt="">
+                    <img src="img/tre1.1.png" id="tre1" alt="">
                 </div>
                 <div class="headerTopRight">
                     <div class="headerTopRightTel">
@@ -193,7 +123,49 @@
                         <a href="javascript:void(0)">Исправление прикуса</a>
                     </div>
                 </div>
-                <div class="mainTopCenter"></div>
+                <div class="mainTopCenter">
+                    <div class="slider">
+                        <div class="stageSlider">
+                            <div class="carouselSl carousel-stageSlider" data-jcarousel="true">
+                                <ul>
+                                    <li>
+                                        <div class="sliderContent">
+                                            <img src="img/slider.png" alt="">
+                                            <div class="fon">
+                                                <p>Чистка зубов всего за 1500 руб.</p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="sliderContent">
+                                            <img src="img/slider.png" alt="">
+                                            <div class="fon">
+                                                <p>Чистка зубов всего за 1500 руб.</p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="sliderContent">
+                                            <img src="img/slider.png" alt="">
+                                            <div class="fon">
+                                                <p>Чистка зубов всего за 1500 руб.</p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="navigationSlider">
+                            <div class="carouselSl carousel-navigationSlider" data-jcarousel="true">
+                                <ul>
+                                    <li data-jcarouselcontrol="true" class="active"></li>
+                                    <li data-jcarouselcontrol="true" class=""></li>
+                                    <li data-jcarouselcontrol="true" class=""></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="mainTopRight">
                     <div class="mainTopRightButton">
                         <button>Задать вопрос</button>
@@ -262,6 +234,7 @@
                             <h2>Наши специалисты</h2>
                             <div id="carousel" class="carousel">
                             <button class="arrow prev"><img src="img/strr.png" alt=""></button>
+                            <button class="arrow prev none" id="noneL"><img src="img/strl1.png" alt=""></button>
                             <div class="gallery">
                               <ul class="images">
                                   <li>
@@ -355,12 +328,14 @@
                               </ul>
                             </div>
                             <button class="arrow next"><img src="img/strl.png" alt=""></button>
+                            <button class="arrow next none" id="noneR"><img src="img/strr1.png" alt=""></button>
                           </div>
                     </div>    
                     <div class="mainBottomLeftSecondCarousel">
                         <h2>Отзывы пациентов</h2>
                             <div id="carousel2" class="carousel2">
                             <button class="arrow2 prev2"><img src="img/strr.png" alt=""></button>
+                            <button class="arrow2 prev2 none" id="noneL2"><img src="img/strl1.png" alt=""></button>
                             <div class="gallery2">
                               <ul class="images2">
                                   <li>
@@ -406,6 +381,7 @@
                               </ul>
                             </div>
                             <button class="arrow2 next2"><img src="img/strl.png" alt=""></button>
+                            <button class="arrow2 next2 none" id="noneR2"><img src="img/strr1.png" alt=""></button>
                           </div>
                     </div>
                 </div>
@@ -422,7 +398,11 @@
                         </div>
                     </div>
                     <div class="mainBottomRightVk">
-                        <div class="topVk">
+                        <a href="javascript:void(0)">
+                            <img src="img/vkGlav.png" alt="">
+                        </a>
+                        
+<!--                        <div class="topVk">
                             <img src="img/vk1.png" id="vk1" alt="">
                             <p>Стоматологическая клиника ВайтДент</p>
                             <img src="img/vk2.png" id="vk2" alt="">
@@ -439,7 +419,7 @@
                                 <a href="javascript:void(0)">Елена</a>
                             </div>
                         </div>
-                        <button>Подписаться на новости</button>
+                        <button>Подписаться на новости</button>-->
                     </div>
                 </div>
                 <div class="clear"></div>
@@ -509,7 +489,7 @@
                 <div class="clear"></div>
             </div>
         </footer>
-        <script src="js/jquery-1.11.3.min.js"></script>
+        
         <script src="js/main.js"></script>
     </body>
 </html>
