nazvanie sohranennih izmeneniy

--- a/index.html
+++ b/index.html
@@ -80,42 +80,49 @@
                         </div>
                         <a href="javascript:void(0)">Компьтерная 3D томография зубов</a>
                     </div>
+                    <div class="clear"></div>
                     <div>
                         <div class="strelka">
                             <img src="img/strelka.png" alt="">
                         </div>
                         <a href="javascript:void(0)">Лечение зубов</a>
                     </div>
+                    <div class="clear"></div>
                     <div>
                         <div class="strelka">
                             <img src="img/strelka.png" alt="">
                         </div>
                         <a href="javascript:void(0)">Лечение десен</a>
                     </div>
+                    <div class="clear"></div>
                     <div>
                         <div class="strelka">
                             <img src="img/strelka.png" alt="">
                         </div>
                         <a href="javascript:void(0)">Хирургия</a>
                     </div>
+                    <div class="clear"></div>
                     <div>
                         <div class="strelka">
                             <img src="img/strelka.png" alt="">
                         </div>
                         <a href="javascript:void(0)">Обезболевание</a>
                     </div>
+                    <div class="clear"></div>
                     <div>
                         <div class="strelka">
                             <img src="img/strelka.png" alt="">
                         </div>
                         <a href="javascript:void(0)">Имплантация</a>
                     </div>
+                    <div class="clear"></div>
                     <div>
                         <div class="strelka">
                             <img src="img/strelka.png" alt="">
                         </div>
                         <a href="javascript:void(0)">Протезирование</a>
                     </div>
+                    <div class="clear"></div>
                     <div>
                         <div class="strelka">
                             <img src="img/strelka.png" alt="">
@@ -174,13 +181,13 @@
                         <div>
                             <img src="img/5.png" alt="">
                             <p>Гарантировано получение помощи при острой боли в момент обращения.</p>
+                            <div class="clear"></div>
                         </div>
-                        <div class="clear"></div>
                         <div>
                             <img src="img/6.png" alt="">
                             <p>Гарантия на все виды стоматологических услуг</p>
+                            <div class="clear"></div>
                         </div>
-                        <div class="clear"></div>
                         <div>
                             <img src="img/8.png" alt="">
                             <p>Обслуживание по ДМС</p>
@@ -441,9 +448,14 @@
                         Выдана 01.01.0000 комитетом по здравоохранению г.Санкт-Петербурга.
                     </p>
                     <div class="media">
-                        <img src="img/media.png" alt="">
-                        <p>Продвижение стаматалогии агентство "Красивые Медиа"</p>
+                        <a href="javascript:void(0)">
+                            <img src="img/media.png" alt="">
+                            <p>Продвижение стаматалогии агентство "Красивые Медиа"</p>
+                        </a>
                     </div>
+                </div>
+                <div class="footerBottomCenter">
+                    <img src="img/logo2.png" alt="">
                 </div>
                 <div class="footerBottomRight">
                     <div class="headerTopRightTel">
@@ -459,13 +471,14 @@
                     <div class="seti">
                         <p>Мы в соц. сетях:</p>
                         <div>
-                            <img src="img/fbLogo.png" alt="">
-                            <img src="img/vkLogo.png" alt="">
+                            <a href="javascript:void(0)">
+                                <img src="img/fbLogo.png" alt="">
+                            </a>
+                            <a href="javascript:void(0)">
+                                <img src="img/vkLogo.png" alt="">
+                            </a>
                         </div>
                     </div>
-                </div>
-                <div class="footerBottomCenter">
-                    <img src="img/logo2.png" alt="">
                 </div>
                 <div class="clear"></div>
             </div>
